--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>hello coursera</title>
+	<title>Our menu1</title>
+	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-<h1>hello hi hello </h1>
+	<h1>Our Menu</h1>
+	<div id="box1">
+		<p id="content">thisis a box modal and i am doing it for the first time
+		                  thisis a box modal and i am doing it for the first time
+                          thisis a box modal and i am doing it for the first time
+                          thisis a box modal and i am doing it for the first time
+		</p>
+		<p id="box11">Chicken</p>
+	</div>
+
+		<div id="box2">
+		<p id="content">thisis a box modal and i am doing it for the first time
+		                  thisis a box modal and i am doing it for the first time
+                          thisis a box modal and i am doing it for the first time
+                          thisis a box modal and i am doing it for the first time
+		</p>
+		<p id="box22">Beef</p>
+	</div>
+		<div id="box3">
+		<p id="content">thisis a box modal and i am doing it for the first time
+		                  thisis a box modal and i am doing it for the first time
+                          thisis a box modal and i am doing it for the first time
+                          thisis a box modal and i am doing it for the first time
+		</p>
+		<p id="box33" >Sushi</p>
+	</div>
+	
+		
+
+
+
 </body>
 </html>
-
